# remusys-ir

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md  TODOLIST.md  UPGRADING.md  UPGRADING.new.md  test_error_messages.rs
docs/: ir-architecture-and-invariants.md  ir-code-summary.md
remusys_mir_instdef/: Cargo.toml
remusys_mir_instdef/src/: lib.rs
rigs/: RIG-DSL-Grammar.md  mir.rig
src/: base.rs  ir.rs  lib.rs  opt.rs  testing.rs  typing.rs
src/base/: apint.rs  bitset.rs  dsu.rs  inline_array.rs  mixref.rs  mod.rs  slabid.rs  slablist.rs  slabref.rs  weak_list.rs
src/ir/: attributes.rs  block.rs  checking.rs  cmp_cond.rs  compact_ir.rs  constant.rs  global.rs  graph_traits.rs  indexed_ir.rs  inst.rs  jumping.rs  managed.rs  mod.rs  module.rs  opcode.rs  usedef.rs  user.rs  utils.rs
src/ir/attributes/: attrlist.rs  attrset.rs  mod.rs
src/ir/block/: jump_target.rs  mod.rs
src/ir/checking/: dominance_check.rs  inst_check.rs  location.rs  mod.rs  sanity.rs  test.rs
src/ir/compact_ir/: inst.rs
src/ir/constant/: array.rs  data.rs  expr.rs  mod.rs  structure.rs  vec.rs
src/ir/global/: func.rs  mod.rs  var.rs
src/ir/inst/: alloca.rs  (+29 more)
src/mir/: block.rs  fmt.rs  func.rs  inst.rs  mod.rs  module.rs  opcode.rs  operand.rs  translate.rs
src/opt/: analysis.rs  mod.rs  transforms.rs  util.rs
src/testing/: cases.rs  cfg.rs  mod.rs  pr.rs
src/typing/: alias.rs  array.rs  compound.rs  context.rs  fmt.rs  func.rs  id.rs  mod.rs  prim.rs  serde.rs  structty.rs  subtypes.rs  types.rs  vec.rs
src/typing_new/: context.rs  id.rs
(+160 files in other folders)
