[package]
name = "remusys-ir"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A recrafted LLVM-like intermediate representation system written in Rust"
repository = "https://github.com/medihbt/remusys-ir"
authors = ["medihbt"]
readme = "README.md"
keywords = ["compiler", "ir", "llvm", "intermediate-representation"]
categories = ["compilers"]

[features]
default = []
random-generation = ["mtb-entity-slab/random-generation"]

[dependencies]
bitflags = "2.9.0"
lazy_static = "1.5.0"
log = "0.4.27"
slab = "0.4.9"
thiserror = "2"
smallvec = { version = "1", features = ["union"] }
mtb-entity-slab = { git = "https://codeberg.org/medihbt/mtb-entity-slab", branch = "master" }
smol_str = "0.3.5"
